--- a/Examples/LoopShaping.ipynb
+++ b/Examples/LoopShaping.ipynb
@@ -5,9 +5,8 @@
    "execution_count": 2,
    "id": "5a8680d4-3c35-436a-92da-1e7373fc80e7",
    "metadata": {
-    "collapsed": true,
     "jupyter": {
-     "outputs_hidden": true
+     "source_hidden": true
     }
    },
    "outputs": [
@@ -53,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 1,
    "id": "36b7758b-e507-4d77-a1a6-45f0cf5d2d92",
    "metadata": {},
    "outputs": [],
@@ -69,12 +68,12 @@
    "id": "cb3e051e-31ff-48ce-ab4a-39ba35efcd76",
    "metadata": {},
    "source": [
-    "## Define the plantTrue)\r\n"
+    "## Define the plant\r\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "id": "22af8137-70a2-46bf-8c4e-bb763aa7bed2",
    "metadata": {},
    "outputs": [
@@ -109,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "id": "786ead1c-a458-46af-8299-61d25b077e72",
    "metadata": {},
    "outputs": [
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 4,
    "id": "eb951026-c8a9-429d-99f6-16ea2a5cc048",
    "metadata": {},
    "outputs": [
